--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,3 +9,20 @@
 .solution{
     left: -33px;
 }
+
+@media (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 1rem;
+  }
+
+  nav li {
+    width: 100%;
+  }
+
+  .nested-submenu {
+    position: static;
+    box-shadow: none;
+  }
+}
