--- a/src/components/companyVision/CompanyVison.css
+++ b/src/components/companyVision/CompanyVison.css
@@ -15,3 +15,12 @@ z-index: 99;
     transform: translate3d(0, -134%, 0);
 
 }
+
+@media (max-width: 768px) {
+  .rectangle-1,
+  .rectangle-2,
+  .rectangle-3,
+  .rectangle-4 {
+    transform: none;
+  }
+}
